--- a/ProjetoListaTarefas/Views/Usuario/Detalhes.cshtml
+++ b/ProjetoListaTarefas/Views/Usuario/Detalhes.cshtml
@@ -10,8 +10,9 @@ Id: @Model.UsuarioId
 <br />
 Nome do Usuário: @Model.NomeUsuario
 <br />
-
-<a asp-action="Delete" asp-route-id="@Model.UsuarioId" class="btn btn-sm btn-danger">Deletar Registro</a>
+<br />
+<a asp-action="Delete" asp-route-id="@Model.UsuarioId" class="btn btn-danger">Deletar</a>
+<a asp-action="Index" class="btn btn-secondary" type="submit">Voltar</a>
 
 
 
