--- a/ProjetoListaTarefas/Views/Tarefa/Create.cshtml
+++ b/ProjetoListaTarefas/Views/Tarefa/Create.cshtml
@@ -18,22 +18,26 @@
         <span asp-validation-for="Descricao" class="text-danger"></span>
     </div>
 
-    <div class="form-group">
+    <div class="col-md">
+        <div class="form-group col-md-2">
         <label asp-for="DtInicio" class="control-label"></label>
         <input asp-for="DtInicio" class="form-control" />
         <span asp-validation-for="DtInicio" class="text-danger"></span>
     </div>
+    </div>
 
-    <div class="form-group">
+    <div class="col-md">
+        <div class="form-group col-md-2">
         <label asp-for="DtFim" class="control-label"></label>
         <input asp-for="DtFim" class="form-control" />
         <span asp-validation-for="DtFim" class="text-danger"></span>
     </div>
-
+    </div>
+    <br />
     <div class="dropdown">
         <label asp-for="StatusTarefa" class="control-label"></label>
         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-            Status da Tarefa
+            Selecione
         </button>
         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             <li><a class="dropdown-item" href="#" onclick="updateStatus('To Do')">To Do</a></li>
@@ -43,8 +47,9 @@
         <input asp-for="StatusTarefa" class="dropdown" style="display: none;" />
     </div>
     <span asp-validation-for="StatusTarefa" class="text-danger"></span>
-
+    <br />
     <button type="submit" class="btn btn-primary">Adicionar</button>
+    <a asp-action="Index" value="Create" class="btn btn-secondary">Voltar</a>
 
 </form>
 <script>
