--- a/ProjetoListaTarefas/Views/Tarefa/Detalhes.cshtml
+++ b/ProjetoListaTarefas/Views/Tarefa/Detalhes.cshtml
@@ -13,7 +13,8 @@ Nome da Tarefa: @Model.NomeTarefa
 Descrição: @Model.Descricao
 <br />
 <br />
-<a asp-action="Delete" asp-route-id="@Model.TarefaId" class="btn btn-sm btn-danger">Deletar Registro</a>
+<a asp-action="Delete" asp-route-id="@Model.TarefaId" class="btn btn-danger">Deletar</a>
+<a asp-action="Index" class="btn btn-secondary" type="submit">Voltar</a>
 
 
 
