--- a/ProjetoListaTarefas/Views/Tarefa/Edit.cshtml
+++ b/ProjetoListaTarefas/Views/Tarefa/Edit.cshtml
@@ -16,10 +16,33 @@
         <span asp-validation-for="NomeTarefa" class="text-danger"></span>
     </div>
 
+    <div class="form-group">
+        <label asp-for="Descricao" class="control-label"></label>
+        <input asp-for="Descricao" class="form-control" />
+        <span asp-validation-for="Descricao" class="text-danger"></span>
+    </div>
+
+    <div class="col-md">
+    <div class="form-group col-md-2">
+        <label asp-for="DtInicio" class="control-label"></label>
+        <input asp-for="DtInicio" class="form-control" />
+        <span asp-validation-for="DtInicio" class="text-danger"></span>
+    </div>
+    </div>
+
+    <div class="col-md">
+    <div class="form-group col-md-2">
+        <label asp-for="DtFim" class="control-label"></label>
+        <input asp-for="DtFim" class="form-control" />
+        <span asp-validation-for="DtFim" class="text-danger"></span>
+    </div>
+    </div>
+
+    <br />
     <div class="dropdown">
         <label asp-for="StatusTarefa" class="control-label"></label>
         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-            Status da Tarefa
+            Selecione
         </button>
         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
             <li><a class="dropdown-item" href="#" onclick="updateStatus('To Do')">To Do</a></li>
@@ -29,19 +52,8 @@
         <input asp-for="StatusTarefa" class="dropdown" style="display: none;" />
     </div>
     <span asp-validation-for="StatusTarefa" class="text-danger"></span>
-
-    <div class="form-group">
-        <label asp-for="DtInicio" class="control-label"></label>
-        <input asp-for="DtInicio" class="form-control" />
-        <span asp-validation-for="DtInicio" class="text-danger"></span>
-    </div>
-
-    <div class="form-group">
-        <label asp-for="DtFim" class="control-label"></label>
-        <input asp-for="DtFim" class="form-control" />
-        <span asp-validation-for="DtFim" class="text-danger"></span>
-    </div>
-
+    <br />
+    
     <button type="submit" class="btn btn-primary">Salvar</button>
-    <a asp-action="Index" class="btn btn-secondary">Cancelar</a>
+    <a asp-action="Index" class="btn btn-secondary">Voltar</a>
 </form>
