--- a/ProjetoListaTarefas/Views/Usuario/Create.cshtml
+++ b/ProjetoListaTarefas/Views/Usuario/Create.cshtml
@@ -12,7 +12,8 @@
         <input asp-for="NomeUsuario" class="form-control" />
         <span asp-validation-for="NomeUsuario" class="text-danger"></span>
     </div>
-
+    <br />
     <button type="submit" class="btn btn-primary">Adicionar</button>
+    <a asp-action="Index" value="Create" class="btn btn-secondary">Voltar</a>
 </form>
 
