--- a/ProjetoListaTarefas/Views/Usuario/Edit.cshtml
+++ b/ProjetoListaTarefas/Views/Usuario/Edit.cshtml
@@ -15,7 +15,7 @@
         <input asp-for="NomeUsuario" class="form-control" />
         <span asp-validation-for="NomeUsuario" class="text-danger"></span>
     </div>
-    
+    <br />
     <button type="submit" class="btn btn-primary">Salvar</button>
-    <a asp-action="Index" class="btn btn-secondary">Cancelar</a>
+    <a asp-action="Index" class="btn btn-secondary">Voltar</a>
 </form>
