--- a/ProjetoListaTarefas/Views/Usuario/Index.cshtml
+++ b/ProjetoListaTarefas/Views/Usuario/Index.cshtml
@@ -3,7 +3,8 @@
 <h2>Lista de Usuários</h2>
 
 <p>
-    <a asp-action="Create">Adicionar Usuário</a>
+    <a asp-action="Create" class="btn btn-primary">Adicionar Usuário</a>
+    <a asp-action="Create" class="btn btn-secondary">Voltar</a>
 </p>
 
 <table class="table">
@@ -21,9 +22,9 @@
                 <td>@usuario.UsuarioId</td>
                 <td>@usuario.NomeUsuario</td>
                 <td>
-                    <a asp-action="Detalhes" asp-route-id="@usuario.UsuarioId">Detalhes</a>
-                    <a asp-action="Edit" asp-route-id="@usuario.UsuarioId">Editar</a>
-                    <a asp-action="Delete" asp-route-id="@usuario.UsuarioId">Deletar</a>
+                    <a asp-action="Detalhes" class="btn btn-info" asp-route-id="@usuario.UsuarioId">Detalhes</a>
+                    <a asp-action="Edit" class="btn btn-warning" asp-route-id="@usuario.UsuarioId">Editar</a>
+                    <a asp-action="Delete" class="btn btn-danger" asp-route-id="@usuario.UsuarioId">Deletar</a>
                 </td>
             </tr>
         }
