--- a/ProjetoListaTarefas/Views/Tarefa/Index.cshtml
+++ b/ProjetoListaTarefas/Views/Tarefa/Index.cshtml
@@ -10,12 +10,12 @@
 <table class="table">
     <thead>
         <tr>
-            <th>TatefaId</th>
-            <th>NomeTarefa</th>
-            <th>Descricao</th>
-            <th>DtInicio</th>
-            <th>DtFim</th>
-            <th>StatusTarefa</th>
+            <th>Tarefa Id</th>
+            <th>Nome da Tarefa</th>
+            <th>Descrição</th>
+            <th>Data Inicial</th>
+            <th>Data Final</th>
+            <th>Status da Tarefa</th>
             <th></th>
         </tr>
     </thead>
