--- a/ProjetoListaTarefas/Views/Usuario/Index.cshtml
+++ b/ProjetoListaTarefas/Views/Usuario/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿ @model List<Usuario>
 
-<h2>Lista de Usuários</h2>
+<h2>Relação de Usuários</h2>
 
 <p>
     <a asp-action="Create" class="btn btn-primary">Adicionar Usuário</a>
@@ -10,8 +10,8 @@
 <table class="table">
     <thead>
         <tr>
-            <th>UsuarioId</th>
-            <th>NomeUsuario</th>
+            <th>Usuário Id</th>
+            <th>Nome do Usuário</th>
             <th></th>
         </tr>
     </thead>
