--- a/ProjetoListaTarefas/Views/Tarefa/Create.cshtml
+++ b/ProjetoListaTarefas/Views/Tarefa/Create.cshtml
@@ -6,37 +6,42 @@
 <h2>Adicionar Tarefa</h2>
 
 <form asp-action="Create" method="post">
-    <div class="form-group">
-        <label asp-for="NomeTarefa" class="control-label"></label>
-        <input asp-for="NomeTarefa" class="form-control" />
-        <span asp-validation-for="NomeTarefa" class="text-danger"></span>
+    <div class="col-md">
+        <div class="form-group col-md-4">
+            <label asp-for="NomeTarefa" class="control-label"></label>
+            <input asp-for="NomeTarefa" class="form-control" />
+            <span asp-validation-for="NomeTarefa" class="text-danger"></span>
+        </div>
     </div>
 
-    <div class="form-group">
-        <label asp-for="Descricao" class="control-label"></label>
-        <input asp-for="Descricao" class="form-control" />
-        <span asp-validation-for="Descricao" class="text-danger"></span>
+    <div class="col-md">
+        <div class="form-group col-md-4">
+            <label asp-for="Descricao" class="control-label"></label>
+            <input asp-for="Descricao" class="form-control" />
+            <span asp-validation-for="Descricao" class="text-danger"></span>
+        </div>
     </div>
 
     <div class="col-md">
         <div class="form-group col-md-2">
-        <label asp-for="DtInicio" class="control-label"></label>
-        <input asp-for="DtInicio" class="form-control" />
-        <span asp-validation-for="DtInicio" class="text-danger"></span>
-    </div>
+            <label asp-for="DtInicio" class="control-label"></label>
+            <input asp-for="DtInicio" class="form-control" />
+            <span asp-validation-for="DtInicio" class="text-danger"></span>
+        </div>
     </div>
 
     <div class="col-md">
         <div class="form-group col-md-2">
-        <label asp-for="DtFim" class="control-label"></label>
-        <input asp-for="DtFim" class="form-control" />
-        <span asp-validation-for="DtFim" class="text-danger"></span>
+            <label asp-for="DtFim" class="control-label"></label>
+            <input asp-for="DtFim" class="form-control" />
+            <span asp-validation-for="DtFim" class="text-danger"></span>
+        </div>
     </div>
-    </div>
+
     <br />
     <div class="dropdown">
         <label asp-for="StatusTarefa" class="control-label"></label>
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+        <button class="btn btn-light dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
             Selecione
         </button>
         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -48,10 +53,11 @@
     </div>
     <span asp-validation-for="StatusTarefa" class="text-danger"></span>
     <br />
+
     <button type="submit" class="btn btn-primary">Adicionar</button>
     <a asp-action="Index" value="Create" class="btn btn-secondary">Voltar</a>
-
 </form>
+
 <script>
     function updateStatus(status) {
         var statusInput = document.querySelector('input[name="StatusTarefa"]');
