--- a/ProjetoListaTarefas/Views/Tarefa/Edit.cshtml
+++ b/ProjetoListaTarefas/Views/Tarefa/Edit.cshtml
@@ -1,7 +1,4 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
 }
 
 @model Tarefa
@@ -10,50 +7,62 @@
 
 <form asp-action="Edit" method="post">
     <input type="hidden" asp-for="TarefaId" />
-    <div class="form-group">
-        <label asp-for="NomeTarefa" class="control-label"></label>
-        <input asp-for="NomeTarefa" class="form-control" />
-        <span asp-validation-for="NomeTarefa" class="text-danger"></span>
-    </div>
 
-    <div class="form-group">
-        <label asp-for="Descricao" class="control-label"></label>
-        <input asp-for="Descricao" class="form-control" />
-        <span asp-validation-for="Descricao" class="text-danger"></span>
+    <div class="col-md">
+        <div class="form-group col-md-4">
+            <label asp-for="NomeTarefa" class="control-label"></label>
+            <input asp-for="NomeTarefa" class="form-control" />
+            <span asp-validation-for="NomeTarefa" class="text-danger"></span>
+        </div>
     </div>
 
     <div class="col-md">
-    <div class="form-group col-md-2">
-        <label asp-for="DtInicio" class="control-label"></label>
-        <input asp-for="DtInicio" class="form-control" />
-        <span asp-validation-for="DtInicio" class="text-danger"></span>
-    </div>
-    </div>
+        <div class="form-group col-md-4">
+            <div class="form-group">
+                <label asp-for="Descricao" class="control-label"></label>
+                <input asp-for="Descricao" class="form-control" />
+                <span asp-validation-for="Descricao" class="text-danger"></span>
+            </div>
+        </div>
 
-    <div class="col-md">
-    <div class="form-group col-md-2">
-        <label asp-for="DtFim" class="control-label"></label>
-        <input asp-for="DtFim" class="form-control" />
-        <span asp-validation-for="DtFim" class="text-danger"></span>
-    </div>
-    </div>
+        <div class="col-md">
+            <div class="form-group col-md-2">
+                <label asp-for="DtInicio" class="control-label"></label>
+                <input asp-for="DtInicio" class="form-control" />
+                <span asp-validation-for="DtInicio" class="text-danger"></span>
+            </div>
+        </div>
 
-    <br />
-    <div class="dropdown">
-        <label asp-for="StatusTarefa" class="control-label"></label>
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-            Selecione
-        </button>
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <li><a class="dropdown-item" href="#" onclick="updateStatus('To Do')">To Do</a></li>
-            <li><a class="dropdown-item" href="#" onclick="updateStatus('Doing')">Doing</a></li>
-            <li><a class="dropdown-item" href="#" onclick="updateStatus('Done')">Done</a></li>
-        </ul>
-        <input asp-for="StatusTarefa" class="dropdown" style="display: none;" />
-    </div>
-    <span asp-validation-for="StatusTarefa" class="text-danger"></span>
-    <br />
-    
-    <button type="submit" class="btn btn-primary">Salvar</button>
-    <a asp-action="Index" class="btn btn-secondary">Voltar</a>
+        <div class="col-md">
+            <div class="form-group col-md-2">
+                <label asp-for="DtFim" class="control-label"></label>
+                <input asp-for="DtFim" class="form-control" />
+                <span asp-validation-for="DtFim" class="text-danger"></span>
+            </div>
+        </div>
+
+        <br />
+        <div class="dropdown">
+            <label asp-for="StatusTarefa" class="control-label"></label>
+            <button class="btn btn-light dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                Selecione
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <li><a class="dropdown-item" href="#" onclick="updateStatus('To Do')">To Do</a></li>
+                <li><a class="dropdown-item" href="#" onclick="updateStatus('Doing')">Doing</a></li>
+                <li><a class="dropdown-item" href="#" onclick="updateStatus('Done')">Done</a></li>
+            </ul>
+            <input asp-for="StatusTarefa" class="dropdown" style="display: none;" />
+        </div>
+        <span asp-validation-for="StatusTarefa" class="text-danger"></span>
+        <br />
+
+        <button type="submit" class="btn btn-primary">Salvar</button>
+        <a asp-action="Index" class="btn btn-secondary">Voltar</a>
 </form>
+
+<script>
+    function updateStatus(status) {
+        document.querySelector('input[name="StatusTarefa"]').value = status;
+    }
+</script>
