--- a/ProjetoListaTarefas/Views/Home/Index.cshtml
+++ b/ProjetoListaTarefas/Views/Home/Index.cshtml
@@ -2,6 +2,21 @@
     ViewData["Title"] = "Home Page";
 }
 
+@model List<ImageModel>
+
 <div class="text-center">
-    <h4 class="display-4">Gerenciador de Tarefas Avanade</h4>    
+    <h5 class="display-6">Bem Vindo ao Gerenciador de Tarefas Avanade</h5>    
 </div>
+
+<div class="row justify-content-md-center">
+
+    @foreach (var images in Model)
+    {
+        <div class="col-autoc col-md-8 col-lg-8">
+            <div class="card mb-2">
+                <br>
+                <img class="card-img-top" src="@images.ImagePath" />
+            </div>
+        </div>
+
+    }
