--- a/ProjetoListaTarefas/Views/RelatorioTarefa/Index.cshtml
+++ b/ProjetoListaTarefas/Views/RelatorioTarefa/Index.cshtml
@@ -24,9 +24,9 @@
                 <td>@relatorio.NomeRelatorio</td>
                 <td>@relatorio.StatusTarefa</td>
                 <td>
-                    <a asp-action="Detalhes" class="btn btn-info" asp-route-id="@relatorio.RelatorioId">Detalhes</a>
-                    <a asp-action="Edit" class="btn btn-warning" asp-route-id="@relatorio.RelatorioId">Editar</a>
-                    <a asp-action="Delete" class="btn btn-danger" asp-route-id="@relatorio.RelatorioId">Deletar</a>
+                    <a asp-action="Detalhes" class="btn btn-info" asp-route-id="@relatorio.RelatorioId"><i class="bi bi-file-earmark-fill"></i> Detalhes</a>
+                    <a asp-action="Edit" class="btn btn-warning" asp-route-id="@relatorio.RelatorioId"><i class="bi bi-pencil-fill"></i> Editar</a>
+                    <a asp-action="Delete" class="btn btn-danger" asp-route-id="@relatorio.RelatorioId"><i class="bi bi-trash3-fill"></i> Deletar</a>
                 </td>
             </tr>
         }
