--- a/ProjetoListaTarefas/Views/Tarefa/Index.cshtml
+++ b/ProjetoListaTarefas/Views/Tarefa/Index.cshtml
@@ -30,9 +30,9 @@
                 <td>@tarefa.DtFim</td>
                 <td>@tarefa.StatusTarefa</td>
                 <td>
-                    <a asp-action="Detalhes" class="btn btn-info" asp-route-id="@tarefa.TarefaId">Detalhes</a>
-                    <a asp-action="Edit" class="btn btn-warning" asp-route-id="@tarefa.TarefaId">Editar</a>
-                    <a asp-action="Delete" class="btn btn-danger" asp-route-id="@tarefa.TarefaId">Deletar</a>
+                    <a asp-action="Detalhes" class="btn btn-info" asp-route-id="@tarefa.TarefaId"><i class="bi bi-file-earmark-fill"></i> Detalhes</a>
+                    <a asp-action="Edit" class="btn btn-warning" asp-route-id="@tarefa.TarefaId"><i class="bi bi-pencil-fill"></i> Editar</a>
+                    <a asp-action="Delete" class="btn btn-danger" asp-route-id="@tarefa.TarefaId"><i class="bi bi-trash3-fill"></i> Deletar</a>
                 </td>
             </tr>
         }
