--- a/ProjetoListaTarefas/Views/Usuario/Index.cshtml
+++ b/ProjetoListaTarefas/Views/Usuario/Index.cshtml
@@ -22,9 +22,9 @@
                 <td>@usuario.UsuarioId</td>
                 <td>@usuario.NomeUsuario</td>
                 <td>
-                    <a asp-action="Detalhes" class="btn btn-info" asp-route-id="@usuario.UsuarioId">Detalhes</a>
-                    <a asp-action="Edit" class="btn btn-warning" asp-route-id="@usuario.UsuarioId">Editar</a>
-                    <a asp-action="Delete" class="btn btn-danger" asp-route-id="@usuario.UsuarioId">Deletar</a>
+                    <a asp-action="Detalhes" class="btn btn-info" asp-route-id="@usuario.UsuarioId"><i class="bi bi-file-earmark-fill"></i> Detalhes</a>
+                    <a asp-action="Edit" class="btn btn-warning" asp-route-id="@usuario.UsuarioId"><i class="bi bi-pencil-fill"></i> Editar</a>
+                    <a asp-action="Delete" class="btn btn-danger" asp-route-id="@usuario.UsuarioId"><i class="bi bi-trash3-fill"></i> Deletar</a>
                 </td>
             </tr>
         }
